# libkipi

./: .gitignore  .kde-ci.yml  AUTHORS  CMakeLists.txt  COPYING  ChangeLog  INSTALL  KDTools-License-US  Makefile.am  Messages.sh  NEWS  README  TODO  configure.in.in  kipiplugin.desktop  libkipi.lsm  libkipi.lsm.cmake  libkipi.pc.cmake  libkipi.pc.in  metainfo.yaml
cmake/templates/: KF5KipiConfig.cmake.in  libkipi.pc.cmake.in
helloworld/: Makefile.am  helloplugin.cpp  helloplugin.h  libkipi_hello.desktop
kipidemo/: Makefile.am  demointerface.cpp  demointerface.h  kipidemo.desktop  kipidemoui.rc  main.cpp  mainwindow.cpp  mainwindow.h
libkipi/: CMakeLists.txt  Doxyfile  KDStream.cpp  KDStream.h  KDTools-License-non-US  LICENSE.GPL  Mainpage.dox  Makefile.am  batchprogressdialog.cpp  batchprogressdialog.h  button.cpp  button.h  configwidget.cpp  configwidget.h  configwidget_p.cpp  configwidget_p.h  design  exportinterface.cpp  exportinterface.h  extension.h  imagechooser.cpp  imagechooser.h  imagecollection.cpp  imagecollection.h  imagecollectiondialog.cpp  imagecollectiondialog.h  imagecollectionselector.cpp  imagecollectionselector.h  imagecollectionshared.cpp  imagecollectionshared.h  imagedialog.cpp  imagedialog.h  imageinfo.cpp  imageinfo.h  imageinfoshared.cpp  imageinfoshared.h  interface.cpp  interface.h  kipiplugin.desktop  libkipi_export.h  (+17 more)
pics/: CMakeLists.txt  Makefile.am  libkipi.qrc
src/: CMakeLists.txt  KDStream.h  LICENSE.GPL  Mainpage.dox  batchprogressdialog.cpp  batchprogressdialog.h  configwidget.cpp  configwidget.h  configwidget_p.cpp  configwidget_p.h  imagecollection.cpp  imagecollection.h  imagecollectionselector.cpp  imagecollectionselector.h  imagecollectionshared.cpp  imagecollectionshared.h  imagedialog.cpp  imagedialog.h  imageinfo.cpp  imageinfo.h  imageinfoshared.cpp  imageinfoshared.h  interface.cpp  interface.h  kipiplugin.desktop  libkipi_config.h.cmake.in  libkipi_debug.cpp  libkipi_debug.h  libkipi_export.h  plugin.cpp  plugin.h  pluginloader.cpp  pluginloader.h  uploadwidget.cpp  uploadwidget.h  version.h  version.h.cmake.in
tests/: CMakeLists.txt  README  TODO  kipiimagecollectionselector.cpp  kipiimagecollectionselector.h  kipiimagecollectionshared.cpp  kipiimagecollectionshared.h  kipiimageinfoshared.cpp  kipiimageinfoshared.h  kipiinterface.cpp  kipiinterface.h  kipipluginloader.cpp  kipipluginloader.h  kipisetup.cpp  kipisetup.h  kipitestmainwindow.cpp  kipitestmainwindow.h  kipitestpluginloader.cpp  kipitestpluginloader.h  kipiuploadwidget.cpp  kipiuploadwidget.h  kxmlkipicmd_defaultui.rc  kxmlkipicmd_gwenviewui.rc  kxmlkipicmdui.rc  main.cpp
tests/common/: kipiimagecollectionselector.cpp  kipiimagecollectionselector.h  kipiimagecollectionshared.cpp  kipiimagecollectionshared.h  kipiimageinfoshared.cpp  kipiimageinfoshared.h  kipiinterface.cpp  kipiinterface.h  kipiuploadwidget.cpp  kipiuploadwidget.h  kipiwritehelp.cpp  kipiwritehelp.h  kipiwriteimage.cpp  kipiwriteimage.h
tests/helloworld/: CMakeLists.txt  kipiplugin_kxmlhelloworld.desktop  kipiplugin_kxmlhelloworldui.rc  plugin_kxmlhelloworld.cpp  plugin_kxmlhelloworld.h
tests/imageio/: kipiwritehelp.cpp  kipiwritehelp.h  kipiwriteimage.cpp  kipiwriteimage.h
tests/kipicmd/: main.cpp
tests/kxmlhelloworld/: CMakeLists.txt
tests/kxmlhelloworld/plugin/: kipiplugin_kxmlhelloworld.desktop  kipiplugin_kxmlhelloworld.desktop.cmake  kipiplugin_kxmlhelloworldui.rc  plugin_kxmlhelloworld.cpp  plugin_kxmlhelloworld.h
tests/kxmlkipicmd/: README  kipisetup.cpp  kipisetup.h  kipitestmainwindow.cpp  kipitestmainwindow.h  kipitestpluginloader.cpp  kipitestpluginloader.h  kxmlkipicmd.qrc  kxmlkipicmd_defaultui.rc  kxmlkipicmd_gwenviewui.rc  main.cpp
tests/plugins/: CMakeLists.txt  Messages.sh  README
tests/plugins/kxmlhelloworld/: kipiplugin_kxmlhelloworld.desktop.cmake.in  plugin_kxmlhelloworld.cpp  plugin_kxmlhelloworld.h
